написание .gradle.kts зависимостей для подключения библиотек для работы